fix broken z-index issues

--- a/public/landing.css
+++ b/public/landing.css
@@ -156,7 +156,7 @@ margin-right: auto;
 
 .section-1-image{
 	height: 100%;
-	z-index: -1;
+	z-index: 10;
 	/*margin-top: 5vh;*/
 	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(128,110,101,0.3)), to(rgba(128,110,101,0.3)) ), url("../public/images/section-2-image-2.jpg");
 	background-image: linear-gradient(rgba(128,110,101,0.3), rgba(128,110,101,0.3) ), url("../public/images/section-2-image-2.jpg");
@@ -318,12 +318,12 @@ color: #806E65;
 	padding-top: 20px;
 }
 .section-map {
-	z-index: -10;
+	z-index: 10;
 	height: 100%;
 }
 
 .section-map img {
-	z-index: -100;
+	z-index: 100;
 	height: 100%;
 	background-color: #F3F3F0;
 }
@@ -487,9 +487,9 @@ display: none;
 }
 }
 @media (max-width: 600px) {
-	#landing-section {
+	/* #landing-section {
 		background: none;
-	}
+	} */
 	.section-map {
 		display: none;
 	}
